--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,11 @@ dependencies:
   shared_preferences: ^2.0.15
   flutter_easyloading: ^3.0.3
   image_picker: ^0.8.5+3
-  email_auth: ^1.0.0
+  flutter_local_notifications: ^9.6.1
+  device_info_plus: ^3.2.4
+  cached_network_image: ^3.2.1
+  flutter_launch: ^0.3.0
+  url_launcher: ^6.1.3
 
 
   # The following adds the Cupertino Icons font to your application.
