--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,19 @@ dependencies:
   cached_network_image: ^3.2.1
   flutter_launch: ^0.3.0
   url_launcher: ^6.1.3
+  intl: ^0.17.0
+  chat_bubbles: ^1.2.0
+  flutter_audio_recorder2: ^0.0.2
+  floating_action_bubble: ^1.1.4
+  flutter_chat_bubble: ^2.0.0
+  flutter_linkify: ^5.0.2
+  flutter_sound: ^9.1.9
+  audio_session: ^0.1.6
+  permission_handler:
+  audioplayers: ^0.20.1
+  overlay_support: ^2.0.1
+  test: 
+  
 
 
   # The following adds the Cupertino Icons font to your application.
